2009-02-17  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c (main): Set the PulseAudio application
	properties as per http://pulseaudio.org/wiki/ApplicationProperties

============ Version 2.25.91

2009-02-17  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am: enable gtk-doc when building tarballs
	* NEWS: upd
	* configure.in: 2.25.91
	* docs/reference/Makefile.am: Fix distcheck

2009-02-17  Bastien Nocera  <hadess@hadess.net>

	* src/plugins/screenshot/totem-gallery-progress.c
	(totem_gallery_progress_finalize), (totem_gallery_progress_new),
	(dialog_response_callback), (stdout_watch_cb),
	(totem_gallery_progress_run):
	* src/plugins/screenshot/totem-gallery.c
	(dialog_response_callback):
	* src/plugins/screenshot/totem-screenshot-plugin.c
	(take_gallery_response_cb), (take_gallery_action_cb): Avoid
	using gtk_dialog_run() inside a gtk_dialog_run() call, fixes
	the gallery plugin (Closes: #561088)

2009-02-17  Bastien Nocera  <hadess@hadess.net>

	* src/totem-video-thumbnailer.c (save_pixbuf): Avoid warnings
	when saving to JPEG format

2009-02-17  Philip Withnall  <philip@tecnocode.co.uk>

	* src/plugins/properties/Makefile.am: Ensure deprecation flags are
	used when compiling the properties plugin.

2009-02-17  Philip Withnall  <philip@tecnocode.co.uk>

	* src/plugins/properties/bacon-video-widget-properties.c
	(bacon_video_widget_properties_class_init),
	(bacon_video_widget_properties_init),
	(bacon_video_widget_properties_dispose): Tidy up
	BaconVideoWidgetProperties a little and remove a deprecated GTK+ call.
	(Closes: #572089)

2009-02-16  Bastien Nocera  <hadess@hadess.net>

	* src/totem-video-thumbnailer.c (main): When printing
	gallery progress, switch off buffering, and blocking output

2009-02-16  Bastien Nocera  <hadess@hadess.net>

	* src/totem-video-thumbnailer.c (create_gallery): Only ever
	print progress when we are asked to do so. Fix filename
	in galleries showing up unescaped when a URI is passed as 
	input
