@@ -1,3 +1,8 @@
+2009-02-19  Robin Stocker  <robin@nibor.org>
+
+	* src/totem-object.c: Fixed warnings about passing and comparison of
+	incompatible pointer types
+
 2009-02-17  Bastien Nocera  <hadess@hadess.net>
 
 	* src/totem.c (main): Set the PulseAudio application
